# pmdsim-mirror

./: CMakeLists.txt  README.md
cmake/: StringifyShaders.cmake
doc/: animation-example.txt  doxyfile.in
src/: README  README.txt  animation.cpp  animation.h  animwidget.cpp  animwidget.h  glhelper.inl  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  osgwidget.cpp  osgwidget.h  qt.qrc  reduction.fs.glsl  render-simple.fs.glsl  render-simple.vs.glsl  simphaseadd.fs.glsl  simresult.fs.glsl  simulator.cpp  simulator.h  simviewhelper.inl  simwidget.cpp  simwidget.h  target.cpp  target.h  trianglepatch.cpp  trianglepatch.h  view2d.fs.glsl  view2dwidget.cpp  view2dwidget.h
